[package]
name = "hisat-3n-table"
version = "0.1.0"
edition = "2024"

[dependencies]
ascii = { version = "1.1", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
rustc-hash = { version = "2.1", features = ["nightly"] }
memmap2 = "0.9"
rayon = "1.10"
anyhow = "1.0"
thiserror = "2"
named_tuple = "0.1"
serde = { version = "1", features = ["derive"]}
rmp-serde = { version = "1.3" }
memchr = "2.7.4"
# atoi = "2.0.0"
atoi_simd = "0.16.0"
ahash = "0.8.12"

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false

[profile.dev]
opt-level = 1
